--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,15 @@ greenlet = "==1.1.2"
 pycodestyle = "==2.8.0"
 SQLAlchemy = "==1.4.31"
 toml = "==0.10.2"
+click = "==8.0.4"
+colorama = "==0.4.4"
+Flask = "==2.0.3"
+Flask-WTF = "==1.0.0"
+itsdangerous = "==2.1.0"
+Jinja2 = "==3.0.3"
+MarkupSafe = "==2.1.0"
+Werkzeug = "==2.0.3"
+WTForms = "==3.0.1"
 
 [dev-packages]
 
